; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cxgbe/common/extr_t4_hw.c_t4_set_filter_mode.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cxgbe/common/extr_t4_hw.c_t4_set_filter_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { i32 }

@t4_set_filter_mode.width = internal global [10 x i32] [i32 1, i32 3, i32 17, i32 17, i32 8, i32 8, i32 16, i32 9, i32 3, i32 1], align 16
@S_FCOE = common dso_local global i32 0, align 4
@S_FRAGMENTATION = common dso_local global i32 0, align 4
@FILTER_OPT_LEN = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@A_TP_VLAN_PRI_MAP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @t4_set_filter_mode(%struct.adapter* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.adapter*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.adapter* %0, %struct.adapter** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 0, i32* %9, align 4
  %10 = load i32, i32* @S_FCOE, align 4
  store i32 %10, i32* %8, align 4
  br label %11

11:                                               ; preds = %29, %3
  %12 = load i32, i32* %8, align 4
  %13 = load i32, i32* @S_FRAGMENTATION, align 4
  %14 = icmp sle i32 %12, %13
  br i1 %14, label %15, label %32

15:                                               ; preds = %11
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %8, align 4
  %18 = shl i32 1, %17
  %19 = and i32 %16, %18
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %28

21:                                               ; preds = %15
  %22 = load i32, i32* %8, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds [10 x i32], [10 x i32]* @t4_set_filter_mode.width, i64 0, i64 %23
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* %9, align 4
  %27 = add nsw i32 %26, %25
  store i32 %27, i32* %9, align 4
  br label %28

28:                                               ; preds = %21, %15
  br label %29

29:                                               ; preds = %28
  %30 = load i32, i32* %8, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %8, align 4
  br label %11

32:                                               ; preds = %11
  %33 = load i32, i32* %9, align 4
  %34 = load i32, i32* @FILTER_OPT_LEN, align 4
  %35 = icmp sgt i32 %33, %34
  br i1 %35, label %36, label %39

36:                                               ; preds = %32
  %37 = load i32, i32* @EINVAL, align 4
  %38 = sub nsw i32 0, %37
  store i32 %38, i32* %4, align 4
  br label %47

39:                                               ; preds = %32
  %40 = load %struct.adapter*, %struct.adapter** %5, align 8
  %41 = load i32, i32* @A_TP_VLAN_PRI_MAP, align 4
  %42 = load i32, i32* %7, align 4
  %43 = call i32 @t4_tp_pio_write(%struct.adapter* %40, i32* %6, i32 1, i32 %41, i32 %42)
  %44 = load %struct.adapter*, %struct.adapter** %5, align 8
  %45 = load i32, i32* %7, align 4
  %46 = call i32 @read_filter_mode_and_ingress_config(%struct.adapter* %44, i32 %45)
  store i32 0, i32* %4, align 4
  br label %47

47:                                               ; preds = %39, %36
  %48 = load i32, i32* %4, align 4
  ret i32 %48
}

declare dso_local i32 @t4_tp_pio_write(%struct.adapter*, i32*, i32, i32, i32) #1

declare dso_local i32 @read_filter_mode_and_ingress_config(%struct.adapter*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
